<resources>
    <string name="app_name">| Film Collection |</string>
    <string name="My_API_KEY">c0f9309d</string>
    <string name="search_title">Search</string>
    <string name="add_movies_to_db">Add Movies to DB</string>
    <string name="search_for_movies">Search for Movies</string>
    <string name="search_for_actors">Search for Actors</string>
    <string name="copyright">©MovieHub:2022</string>
    <string name="search">search</string>
    <string name="save_movie_to_database">Save movie to Database</string>
    <string name="retrieve_movie">Retrieve Movie</string>
    <string name="search_movie">Search</string>
    <string name="filter_movies">Filter Movies</string>
    <string name="application_logo">Application Logo</string>
    <string name="database_title">Database Table Data values</string>
</resources>